HOME - fixed page overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -22,15 +22,15 @@ body {
 }
 
 .parent {
-  width: 100%;
-  /* margin: 50px; */
-  /* padding: 4rem; */
+  max-width: 1200px;      
+  margin: 0 auto;          
+  padding: 4rem;          
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 50px;
-  grid-row-gap: 25px;
-  /* border: 1px solid red; */
+  grid-column-gap: 60px;
+  grid-row-gap: 50px;
+  border: 1px solid red;
 }
 
 .div1 {
